# CSCI434-final

./: .gitignore  README.md  extended_research_addendum.md  pyproject.toml  report_draft.txt
Wireshark Captures/: chatgpt.csv  chatgpt.pcapng  chatgpt1.csv  chatgpt1.pcapng  chatgpt2.csv  chatgpt2.pcapng  chatgpt3.csv  chatgpt3.pcapng  chatgpt4.csv  chatgpt4.pcapng  chatgpt5.csv  chatgpt5.pcapng  github.csv  github.pcapng  github1.csv  github1.pcapng  github2.csv  github2.pcapng  github3.csv  github3.pcapng  github4.csv  github4.pcapng  github5.csv  github5.pcapng  instagram.csv  instagram.pcapng  instagram1.pcapng  instagram2.pcapng  instagram3.pcapng  instagram4.csv  instagram4.pcapng  instagram5.csv  instagram5.pcapng  nbcnews.csv  nbcnews.pcapng  nbcnews1.pcapng  nbcnews2.pcapng  nbcnews3.pcapng  nbcnews4.pcapng  nbcnews5.pcapng  (+8 more)
notebooks/: feature_exploration.ipynb
report_assets/: figure_10_nbc_walmart_blind_profile.csv  figure_2_confusion_matrix.csv  figure_3_feature_importance.csv  figure_4_session_vote_confidence.csv  figure_7_extended_model_comparison.csv  figure_8_linear_svm_loso_fold_accuracy.csv  figure_8_linear_svm_loso_predictions.csv  figure_9_linear_svm_loso_confusion_matrix.csv  table_1_dataset_summary.csv  table_2_model_comparison.csv  table_3_feature_ablation.csv  table_4_session_vote_summary.csv  table_5_linear_svm_selected_features.csv
scripts/: generate_extended_research_assets.py  generate_report_assets.py  run_blind_test.py  run_experiment.py  run_hybrid_session_aware_test.py  run_session_level_test.py
src/traffic_classifier/: __init__.py  (+2 more)
